v2016-04-16
  * ssh:
      添加SSH 密钥对以做备份

v2016-04-15
  * all:
      更新了README.md
  * git:
      默认复制配置文件，不再使用链接
  * hosts:
      增加了hosts
  * iam:
      增加了iam 函数

v2016-04-12.2
  * all:
      更新了README.md
  * vim:
      允许加载YCM
      尝试自动解决YCM 对libtinfo 的依赖

v2016-04-12
  * bash & zsh:
      修改了alias
      修改了apply
  * vim:
      增删了几个插件
      不再与color_coded 共用一套clang
  * tig:
      所有模式下显示commit id

v2016-04-08.3
  * bash & zsh:
      将makepatch 函数修改为mkpatch
      修正了一些错误的帮助信息

v2016-04-08.2
  * all:
      增加了MIT-LICENSE
      修改了过时的README.md

v2016-04-08
  * bash & zsh:
      删除了diff 的别名
      增加了一套补丁工具

v2016-04-05
  * bash & zsh:
      修复了一处可能使所有终端都无法登陆的BUG

v2016-03-18
  * bash & zsh:
      archpkg 更新pkgfile 数据库时使用root 权限

v2016-03-17
  * vim:
      根据YCM 的改动修改了make 的参数

v2016-03-08
  * tig:
      增加tig 配置文件

v2016-02-24
  * bash & zsh:
      现在archpkg clean-system 时使用-Rsn 参数了

v2016-02-21
  * bash & zsh:
      修复了vman 不带参数运行导致终端退出的错误

v2016-02-19
  * bash & zsh:
      增加vman 函数

v2016-02-18
  * bash & zsh:
      修正了git 目录下错误的init 脚本

v2016-02-16.2
  * zsh:
      Fixed #1

v2016-02-16
  * bash & zsh:
      为android_env 增加了初始化脚本
  * tmux:
      修改了一处新版本中变动的配置选项
  * nano:
      删除了一处不兼容新版本的配置选项

v2016-01-29
  * vim:
      增加了插件vim-jst 和vim-javascript

v2016-01-26
  * all:
      cpan 模块使用系统默认路径
  * zsh:
      完善了说明文件

v2016-01-21
  * all:
      备份文件采用了更加明确的时间后缀

v2016-01-13
  * zsh:
      增加了一些小函数

v2015-12-30
  * zsh & bash:
      增加了一些alias
  * bash:
      完善了bash 的基本配置和补全
  * vim:
      修正了一处map 错误

v2015-12-03
  * vim:
      完善了README.md
      添加了依赖zlib
      移除了插件python-syntax

v2015-11-18
  * zsh & bash:
      添加了一些ls 和cd 指令的容错
  * vim
      增加了perl 脚本的实时错误检查
      增加了插件ultisnips

v2015-11-13
  * zsh & bash:
      Add girlfriend
  * nano:
      PKGBUILD 语法高亮使用单独的文件
  * terminator:
      修改了键位以兼容nano
      禁用了大多数快捷键

v2015-11-05.2
  * zsh:
      增加了ssh-env 和archpkg 的自动补全
      增加了groot 指令

v2015-11-05
  * git:
      现在git 配置不会被安装了

v2015-11-01
  * fish: