@@ -20,8 +20,8 @@
 # ==============================================================================
 # 公司
 # ==============================================================================
-192.168.80.1      gate.we
 121.69.10.26      vpn.we
+192.168.80.1      gate.we
 192.168.80.119    ppc.box.we
 192.168.80.25     x86.box.we
 192.168.80.71     git.we
